added 'shop' project

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
     <script src="https://kit.fontawesome.com/13109f812e.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>Ihor Simashko</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
