--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
     <script src="https://kit.fontawesome.com/13109f812e.js" crossorigin="anonymous"></script>
     <title>Ihor Simashko</title>
+    <link rel="icon" href="https://i.ibb.co/JBpxdQ6/icon.png">
 
   </head>
   <body>
