--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
     <script src="https://kit.fontawesome.com/13109f812e.js" crossorigin="anonymous"></script>
     <title>Ihor Simashko</title>
+    <meta name="description" content="Ihor Simashko. Portfolio-website. Experienced Full Stack Developer, about him, his skills and projects."/>
     <link rel="icon" href="https://i.ibb.co/JBpxdQ6/icon.png">
-
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
